# mcp-test

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: openapi.yaml
manifests/: deployment.yaml  networkpolicy.yaml  rbac.yaml  service.yaml
src/gke_cred_audit/: __init__.py  api.py  asgi.py  audit.py  config.py  findings.py  main.py  mcp_server.py  models.py  openapi.py  redact.py
src/gke_cred_audit/collectors/: gcp_metadata.py  k8s_namespace.py  k8s_rbac.py  k8s_sa_tokens.py  mounted_secrets.py
tests/: __init__.py  test_mcp_streamable_http.py  test_natoma_contract.py  test_openapi_spec.py  test_redaction_invariant.py  test_redaction_unit.py
