[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gke-cred-audit"
version = "0.1.0"
description = "Defensive credential-exposure auditor for GKE pods (REST + MCP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Security Platform" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "PyJWT>=2.9",
  "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "openapi-spec-validator>=0.7",
  "httpx>=0.27",
]

[project.scripts]
gke-cred-audit = "gke_cred_audit.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gke_cred_audit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
